--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "reinstall": "rm -rf .next/ && rm -rf node_modules/ && yarn install"
   },
   "dependencies": {
     "axios": "^1.1.3",
